Fixed media section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
   </div>
   <div class="row">
     <div class="col-md-6">
+      <a href="https://ccxmedia.org/sports/alex-miley-baseball-umpire-entrepreneur/">
       <div class="card text center">
         <img src="MainImages/wbmedia1.jpg" class="card-img-top">
         <div class="card-body">
@@ -167,8 +168,10 @@
           <p class="card-text">ccxmedia.org</p>
         </div>
       </div>
+      </a>
     </div>
     <div class="col-md-6">
+      <a href="https://maplegrovemag.com/local-umpire-association-trains-future-behind-home-plate">
       <div class="card text center">
         <img src="MainImages/wbmedia2.jpg" class="card-img-top">
         <div class="card-body">
@@ -176,8 +179,10 @@
           <p class="card-text">maplegrovemag.com</p>
         </div>
       </div>
+      </a>
     </div>
     <div class="col-md-6">
+      <a href="https://www.hometownsource.com/press_and_news/sports/former-crimson-track-cross-country-star-miley-running-new-umpiring-business/article_ab332438-0bc3-11ea-af3e-fbbd732f4d25.html">
       <div class="card text center">
         <img src="MainImages/wbmedia3.jpg" class="card-img-top">
         <div class="card-body">
@@ -185,6 +190,7 @@
           <p class="card-text">hometownsource.com</p>
         </div>
       </div>
+      </a>
     </div>
   </div>
 </div>
