Fixed typing errors and about us formatting for mobile

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="card text center">
         <img src="MainImages/wbmedia1.jpg" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Aiden Miley: Baseball Umpire Entrepreneur - CCX Media</h5>
+          <h5 class="card-title">Alex Miley: Baseball Umpire Entrepreneur - CCX Media</h5>
           <p class="card-text">ccxmedia.org</p>
         </div>
       </div>
