Fixed team logos

--- a/index.html
+++ b/index.html
@@ -141,11 +141,19 @@
       <a href="https://www.hamelbaseball.org/" target="_blank">
       <img src="MainImages/hamelbball.png" class="bballImg" alt="Hamel Baseball">
       </a>
-      <a href="https://omgaa.hardballsystems.com/page/show/4851416-storm-travel-baseball-2019-" target="_blank">
-      <img src="MainImages/stormbball.png" class="bballImg2" alt="Storm Baseball">
-      </a>
       <a href="https://omgaa.hardballsystems.com/page/show/4085-home" target="_blank">
-      <img src="MainImages/omgaabball.png" class="bballImg" alt="OMGAA">
+        <img src="MainImages/stormbball.png" class="bballImg2" alt="Storm Baseball">
+      </a>
+      <a href="https://www.stmayouthbaseball.org/" target="_blank">
+      <img src="MainImages/stmalogo.png" class="bballImg" alt="STMA">
+      </a>
+    </div>
+    <div class="extraImages2">
+      <a href="https://omgaa.hardballsystems.com/page/show/4085-home" target="_blank">
+        <img src="MainImages/omgaabball.png" class="bballImg" alt="OMGAA">
+      </a>
+      <a href="https://www.pwysa.com/" target="_blank">
+        <img src="MainImages/wzfp.png" class="bballImg" alt="Wayzata Fastpitch">
       </a>
     </div>
   </div>
