--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       
         <a class="navbar-brand" href="index.html">
         <img src="MainImages/logo.png"
-         width="70" height="70" alt="Logo"></a>
+         width="70" height="auto" alt="Logo"></a>
          <span class="logo-title mr-auto">Walks & Balks</span>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
