Added Email Functionality

--- a/apply.html
+++ b/apply.html
@@ -18,6 +18,16 @@
     <link rel="icon" type="image/png" href="MainImages/favicon.ico" sizes="32x32"/>
     <link rel="icon" type="image/png" href="MainImages/favicon.ico" sizes="16x16"/>
 
+    <!--Email Service-->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+      emailjs.init("GwkidcA1nQzN2314Z");
+    })();
+    </script>
+
 </head>
 <body class="apply2">
     <style>
@@ -119,7 +129,7 @@
         </div>
         <br>
         <!--<button class="btn btn-primary" id="appSubmitBtn" type="submit" href="" role="button">Submit</a>-->
-        <button  id="appSubmitBtn">Submit</button>
+        <button  id="appSubmitBtn" onclick="sendEmail();">Submit</button>
         <a id="subLink" href="submitted.html" hidden></a>
   </div>
 
