--- a/apply.html
+++ b/apply.html
@@ -89,7 +89,7 @@
             <div class="invalid-feedback" id="phoneFeed"></div>
         </div>
         <div class="form-label-group">
-            <input type="text" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="">
             <label for="inputEmail">Email Address</label>
             <div class="invalid-feedback" id="emailFeed"></div>
         </div>
