--- a/submitted.html
+++ b/submitted.html
@@ -35,10 +35,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="photos.html">Photos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="umpires.html">Umpires</a>
+                <a class="nav-link" href="apply.html">Apply</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
