modified:   apply.html 	modified:   apply1.html 	modified:   contact.html 	modified:   schedule.html 	modified:   submitted.html 	modified:   umpires.html

--- a/contact.html
+++ b/contact.html
@@ -110,5 +110,9 @@
   </section>
   <script src= "contact.js"></script>
 
+  <footer>
+    &copy; 2023 Walks and Balks, LLC.
+  </footer>
+  
   </body>
   </html>
