--- a/submitted.html
+++ b/submitted.html
@@ -55,3 +55,10 @@
           <a class="btn btn-primary" id="finishBtn" href="index.html" role="button">Finish</a>
       </div>
   </div>
+
+  <footer>
+    &copy; 2023 Walks and Balks, LLC.
+  </footer>
+
+</body>
+</html>
