modified:   apply.html

--- a/apply.html
+++ b/apply.html
@@ -129,6 +129,7 @@
         <button  id="appSubmitBtn" onclick="sendEmail();">Submit</button>
         <a id="subLink" href="submitted.html" hidden></a>
   </div>
+  </div>
 
 <script src="main.js"></script>
 
