Fixed email submission 	Fixed email submission

--- a/apply.html
+++ b/apply.html
@@ -126,7 +126,7 @@
         </div>
         <br>
         <!--<button class="btn btn-primary" id="appSubmitBtn" type="submit" href="" role="button">Submit</a>-->
-        <button  id="appSubmitBtn" onclick="sendEmail();">Submit</button>
+        <button  id="appSubmitBtn">Submit</button>
         <a id="subLink" href="submitted.html" hidden></a>
   </div>
   </div>
